[ASTERIXDB-3559][COMP] Add output document size at each operator in explain plan
- user model changes: yes
- storage format changes: no
- interface changes: no

Details:
Explain plans currently display cardinality, operator cost, and total cost at each
operator in the explain plan.

This patch adds the output document size to the above parameters to each operator in
the explain plan.

Ext-ref: MB-65102

Change-Id: I6a3e8ec8b904b34b96a055b19cd5e826246bd7a0
Reviewed-on: https://asterix-gerrit.ics.uci.edu/c/asterixdb/+/19392
Reviewed-by: Vijay Sarathy <vijay.sarathy@couchbase.com>
Reviewed-by: Ian Maxon <imaxon@apache.org>
Integration-Tests: Jenkins <jenkins@fulliautomatix.ics.uci.edu>
Tested-by: Ian Maxon <imaxon@apache.org>